# LoocieAI_V2_Master

./: .gitignore  README.md  loocie_voice.py  pyproject.toml  requirements.txt
LoocieCoreAI/engine/: .env.example  README.md  requirements.txt
LoocieCoreAI/engine/app/: audit.py  config.py  main.py  memory_store.py  model_clients.py  models.py  security.py
LoocieCoreAI/macapp/: APIClient.swift  EngineManager.swift  Models.swift  SettingsView.swift
LoocieCoreAI/macapp/LoocieCoreAI/: ContentView.swift  LoocieCoreAIApp.swift
LoocieCoreAI/macapp/LoocieCoreAI.xcodeproj/: project.pbxproj
LoocieCoreAI/macapp/LoocieCoreAITests/: LoocieCoreAITests.swift
LoocieCoreAI/macapp/LoocieCoreAIUITests/: LoocieCoreAIUITests.swift  LoocieCoreAIUITestsLaunchTests.swift
app/: config.py  logger_config.py  main.py
app/api/routes/: chat.py  health.py  root.py
app/core/: knowledge.py  llm.py  memory.py  vault.py
